# CppRenderEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  Render.sln
Render/: Camera.h  FrameBuffer.h  Projection.cpp  Render.vcxproj  Render.vcxproj.filters  RenderMain.cpp  Tracing.cpp
include/: Camera.h  Constants.h  Projection.h  Tracing.h  Vector.h
src/: FrameBuffer.cpp  Projection.cpp  RenderMain.cpp  Tracing.cpp
